--- a/requirements.txt
+++ b/requirements.txt
@@ -14,7 +14,10 @@ Flask-PageDown==0.1.4
 Flask-Script==0.6.6
 Flask-SQLAlchemy==1.0
 Flask-WTF==0.9.4
+foreman==0.9.7
 ForgeryPy==0.1
+futures==3.0.5
+gunicorn==19.6.0
 html5lib==1.0b3
 httpie==0.7.2
 itsdangerous==0.23
@@ -24,6 +27,7 @@ Markdown==2.3.1
 MarkupSafe==0.18
 Pygments==1.6
 requests==2.1.0
+requests-futures==0.9.7
 selenium==2.45.0
 six==1.4.1
 SQLAlchemy==0.9.9
