--- a/requirements.txt
+++ b/requirements.txt
@@ -13,6 +13,7 @@ Flask-Moment==0.2.1
 Flask-PageDown==0.1.4
 Flask-Script==0.6.6
 Flask-SQLAlchemy==1.0
+Flask-SSLify==0.1.5
 Flask-WTF==0.9.4
 foreman==0.9.7
 ForgeryPy==0.1
